[gd_scene load_steps=17 format=3 uid="uid://bbr3velmeaud7"]

[ext_resource type="Script" path="res://Scripts/Objects/bath_door.gd" id="1_h0jdb"]
[ext_resource type="Texture2D" uid="uid://bydbxjo5wq0eo" path="res://Assets/Museum/Objects/animated_door_bathroom_48x48.png" id="2_84rmn"]
[ext_resource type="AudioStream" uid="uid://dvxjoenutp7ai" path="res://Assets/Sounds/Car_door_shutting.ogg" id="3_jetkv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knfw7"]
size = Vector2(48, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rixe7"]
size = Vector2(48, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuoof"]
atlas = ExtResource("2_84rmn")
region = Rect2(192, 0, 48, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_7stbw"]
atlas = ExtResource("2_84rmn")
region = Rect2(144, 0, 48, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdn4y"]
atlas = ExtResource("2_84rmn")
region = Rect2(96, 0, 48, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa08h"]
atlas = ExtResource("2_84rmn")
region = Rect2(48, 0, 48, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lvly"]
atlas = ExtResource("2_84rmn")
region = Rect2(0, 0, 48, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q6bt"]
atlas = ExtResource("2_84rmn")
region = Rect2(0, 0, 48, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnt4m"]
atlas = ExtResource("2_84rmn")
region = Rect2(48, 0, 48, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_eueyq"]
atlas = ExtResource("2_84rmn")
region = Rect2(96, 0, 48, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1qn6"]
atlas = ExtResource("2_84rmn")
region = Rect2(144, 0, 48, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_77y0r"]
atlas = ExtResource("2_84rmn")
region = Rect2(192, 0, 48, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_mw7ld"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuoof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7stbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdn4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa08h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lvly")
}],
"loop": false,
"name": &"Close",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q6bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnt4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eueyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1qn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77y0r")
}],
"loop": false,
"name": &"Open",
"speed": 5.0
}]

[node name="BathDoor" type="StaticBody2D"]
collision_layer = 4
script = ExtResource("1_h0jdb")

[node name="BathDoorCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 27)
shape = SubResource("RectangleShape2D_knfw7")

[node name="BathDoorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BathDoorArea"]
position = Vector2(0, 31)
shape = SubResource("RectangleShape2D_rixe7")

[node name="BathDoorAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mw7ld")
animation = &"Open"

[node name="CloseDoorSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jetkv")

[connection signal="body_entered" from="BathDoorArea" to="." method="_on_bath_door_area_body_entered"]
[connection signal="body_exited" from="BathDoorArea" to="." method="_on_bath_door_area_body_exited"]
